--- a/Web/ForumSys.Web/Views/Categories/ByName.cshtml
+++ b/Web/ForumSys.Web/Views/Categories/ByName.cshtml
@@ -19,10 +19,10 @@
                     <img class="media-object" src="@Model.ImageURL" width="250">
                 </a>
                 <div class="media-body">
-                    <h4 class="media-heading">@post.Title</h4>
+                    <h4 class="media-heading"><a asp-controller="Post" asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h4>
                     <p class="text-right">@post.UserUserName</p>
                     <p>
-                        Body text
+                        @post.ShortContent
                     </p>
                     <ul class="list-inline list-unstyled">
                         <li><span><i class="glyphicon glyphicon-calendar"></i>@post.CreatedOn Comments @post.CommentsCount</span></li>
@@ -48,5 +48,5 @@
             </div>
         </div>
     </div>
-
+    <hr/>
 }
