--- a/Web/ForumSys.Web/Views/Post/Create.cshtml
+++ b/Web/ForumSys.Web/Views/Post/Create.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@model ForumSys.Web.ViewModels.OutPutViewModels.Posts.PostCreateInputModel
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="d-flex justify-content-center">@ViewData["Title"]</h1>
 
+
+<script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    tinymce.init({
+        selector: "textarea",
+        plugins: [
+            "image paste table link code media"
+        ]
+    });
+</script>
+
+<form asp-action="Create" asp-area="" asp-controller="Post" method="post">
+
+    <div>
+        <label asp-for="Title"></label>
+        <input asp-for="Title" class="form-control" />
+        <span asp-validation-for="Title" class="text-danger"></span>
+    </div>
+
+    <div>
+        <label asp-for="Content"></label>
+        <textarea asp-for="Content" class="form-control" ></textarea>
+        <span asp-validation-for="Content" class="text-danger"></span>
+    </div>
+
+    <div>
+        <label>Category</label>
+        <select class="form-control" asp-for="CategoryId" asp-items="Model.Categories.Select(x => new SelectListItem(x.Name, x.Id.ToString()))">
+        </select>
+        <span asp-validation-for="CategoryId" class="text-danger"></span>
+    </div>
+
+    <input class="btn btn-outline-primary mt-3" type="submit" name="submit" value="Add post" />
+</form>
