--- a/Web/ForumSys.Web/Views/Shared/_Layout.cshtml
+++ b/Web/ForumSys.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
+                        
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-action="Create" asp-area="" asp-controller="Post">Create</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
