--- a/Web/ForumSys.Web/Views/Post/Create.cshtml
+++ b/Web/ForumSys.Web/Views/Post/Create.cshtml
@@ -26,7 +26,7 @@
 
     <div>
         <label asp-for="Content"></label>
-        <textarea asp-for="Content" class="form-control" ></textarea>
+        <textarea id="textValidate" asp-for="Content" class="form-control"></textarea>
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
 
@@ -37,5 +37,13 @@
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
 
-    <input class="btn btn-outline-primary mt-3" type="submit" name="submit" value="Add post" />
+    <input  onclick="validate()" class="btn btn-outline-primary mt-3" type="submit" name="submit" value="Add post" />
 </form>
+
+<script>
+    function validate() {
+        const data = document.getElementById("#textValidate");
+        console.log(data);
+        return false;
+    }
+</script>
