--- a/Web/ForumSys.Web/Views/Post/ById.cshtml
+++ b/Web/ForumSys.Web/Views/Post/ById.cshtml
@@ -7,6 +7,7 @@
 
 @* To Do some form for posts *@
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" />
 
 <div class="media">
     @*<img class="mr-3" src="..." alt="Generic placeholder image">*@
@@ -16,15 +17,27 @@
         <hr />
         <div class="row">
             <div class="col-6">
-                Created on: @Model.CreatedOn
+                <i class="fa fa-calendar" aria-hidden="true"></i>@Model.CreatedOn
             </div>
 
             <div class="col-6 text-right">
-                By user: @Model.UserUserName
+                <i class="fa fa-user"></i>@Model.UserUserName
             </div>
         </div>
         <hr />
-        <h3>Comments</h3>
+        <div>
+            <div class="d-flex justify-content-between">
+                <h3>Comments</h3>
+                <form id="votesForm" method="post">
+                    <input type="hidden" />
+                </form>
+                <div class="d-flex justify-content-end vote-container">
+                    <div class="mr-3"><i onclick="upVote(@Model.Id)" class="fa fa-thumbs-up"></i></div>
+                    <div id="votesCount" class="mr-4 text-right">@Model.VotesCount</div>
+                    <div class=""><i onclick="downVote(@Model.Id)" class="fa fa-thumbs-down"></i></div>
+                </div>
+            </div>
+        </div>
         <hr />
         <div class="media pl-sm-5 ml-sm-5 mt-3">
             <a class="pr-3" href="#">
@@ -37,3 +50,55 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        const upVote = async (postId) => {
+            var json = {
+                postId: postId,
+                isUpVote: true
+            };
+
+            var token = $("#votesForm input[name=__RequestVerificationToken]").val();
+
+            $.ajax({
+                url: "/api/votes",
+                type: "POST",
+                data: JSON.stringify(json),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                headers: { 'X-CSRF-TOKEN': token },
+                success: function (data) {
+                    $("#votesCount").html(data.votesCount);
+                }
+            })
+
+        }
+        const downVote = (postId) => {
+             var json = {
+                postId: postId,
+                isUpVote: false
+            };
+
+            var token = $("#votesForm input[name=__RequestVerificationToken]").val();
+
+            $.ajax({
+                url: "/api/votes",
+                type: "POST",
+                data: JSON.stringify(json),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                headers: { 'X-CSRF-TOKEN': token },
+                success: function (data) {
+                    if (data.votesCount < 0) {
+                        $("#votesCount").html("0");
+                    } else {
+                        $("#votesCount").html(data.votesCount);
+                    }
+                }
+            })
+        }
+
+    </script>
+
+}
