--- a/Web/ForumSys.Web/wwwroot/css/site.css
+++ b/Web/ForumSys.Web/wwwroot/css/site.css
@@ -1,6 +1,14 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.short-content-post {
+    height: 54px;
+}
+
+#votesCount {
+    width: 15px;
+}
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
