--- a/Web/ForumSys.Web/Views/Categories/ByName.cshtml
+++ b/Web/ForumSys.Web/Views/Categories/ByName.cshtml
@@ -25,27 +25,38 @@
                         @post.ShortContent
                     </p>
                     <ul class="list-inline list-unstyled">
-                        <li><span><i class="fa fa-calendar" aria-hidden="true"></i>@post.CreatedOn <i class="fa fa-comment"></i> @post.CommentsCount</span></li>
-                        @*<li>|</li>
-                        <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
-                        <li>|</li>
                         <li>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
+                            <span>
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                                @post.CreatedOn
+                                <i class="fa fa-comment pl-sm-2"></i> @post.CommentsCount
+                                <i class="fa fa-heart-o pl-sm-2"></i>
+                                @post.PositiveVotes
+                            <i class="fa fa-thumbs-down"></i>
+                                @post.NegativeVotes
+                            </span>
                         </li>
-                        <li>|</li>*@
+
+                        @*<li>|</li>
+        <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
+        <li>|</li>
+        <li>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star-empty"></span>
+        </li>
+        <li>|</li>*@
                         @*<li>
-                            <span><i class="fa fa-facebook-square"></i></span>
-                            <span><i class="fa fa-twitter-square"></i></span>
-                            <span><i class="fa fa-google-plus-square"></i></span>
-                        </li>*@
+            <span><i class="fa fa-facebook-square"></i></span>
+            <span><i class="fa fa-twitter-square"></i></span>
+            <span><i class="fa fa-google-plus-square"></i></span>
+        </li>*@
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <hr/>
+    <hr />
 }
