--- a/Web/ForumSys.Web/Views/Post/ById.cshtml
+++ b/Web/ForumSys.Web/Views/Post/ById.cshtml
@@ -91,8 +91,8 @@
                 headers: { 'X-CSRF-TOKEN': token },
                 success: function (data) {
                     if (data.votesCount < 0) {
-                        $("#votesCount").html("0");
-                    } else {
+                    //    $("#votesCount").html("0");
+                    //} else {
                         $("#votesCount").html(data.votesCount);
                     }
                 }
