--- a/Web/ForumSys.Web/Views/Categories/ByName.cshtml
+++ b/Web/ForumSys.Web/Views/Categories/ByName.cshtml
@@ -8,11 +8,23 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="alert alert-info">@Model.Description</div>
-@foreach (var post in Model.Posts)
+
+@*<form asp-controller="Categories" asp-action="ByName" method="get">
+        <input type="hidden" name="name" value="@Model.Title" />
+        <input type="hidden" name="page" value="2" />
+        <input type="submit" name="name" value="Submit page" />
+    </form>*@
+
+
+
+@foreach (var post in Model.ForumPosts)
 {
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" />
+
     <div class="container">
+
+
         <div class="well">
             <div class="media">
                 <a class="pull-left mr-3" href="#">
@@ -32,27 +44,27 @@
                                 <i class="fa fa-comment pl-sm-2"></i> @post.CommentsCount
                                 <i class="fa fa-heart-o pl-sm-2"></i>
                                 @post.PositiveVotes
-                            <i class="fa fa-thumbs-down"></i>
+                                <i class="fa fa-thumbs-down"></i>
                                 @post.NegativeVotes
                             </span>
                         </li>
 
                         @*<li>|</li>
-        <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
-        <li>|</li>
-        <li>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-        </li>
-        <li>|</li>*@
+                            <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
+                            <li>|</li>
+                            <li>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star-empty"></span>
+                            </li>
+                            <li>|</li>*@
                         @*<li>
-            <span><i class="fa fa-facebook-square"></i></span>
-            <span><i class="fa fa-twitter-square"></i></span>
-            <span><i class="fa fa-google-plus-square"></i></span>
-        </li>*@
+                                <span><i class="fa fa-facebook-square"></i></span>
+                                <span><i class="fa fa-twitter-square"></i></span>
+                                <span><i class="fa fa-google-plus-square"></i></span>
+                            </li>*@
                     </ul>
                 </div>
             </div>
@@ -60,3 +72,57 @@
     </div>
     <hr />
 }
+<nav aria-label="...">
+    <ul class="pagination justify-content-center">
+
+        @if (this.Model.CurrentPage <= 1)
+        {
+            <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link "
+                   asp-controller="Categories"
+                   asp-action="ByName"
+                   asp-route-name="@this.Model.Title"
+                   asp-route-page="@(this.Model.CurrentPage - 1)">
+                    Previous
+                </a>
+
+            </li>
+        }
+
+        @for (int i = 1; i <= this.Model.PagesCount; i++)
+        {
+            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+            <li class="page-item @active">
+                <a class="page-link "
+                   asp-controller="Categories"
+                   asp-action="ByName"
+                   asp-route-name="@this.Model.Title"
+                   asp-route-page="@i">@i</a>
+            </li>
+        }
+        @if (this.Model.CurrentPage < this.Model.PagesCount)
+        {
+            <li class="page-item">
+                <a class="page-link "
+                   asp-controller="Categories"
+                   asp-action="ByName"
+                   asp-route-name="@this.Model.Title"
+                   asp-route-page="@(this.Model.CurrentPage + 1)">
+                    Next
+                </a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <span class="page-link">Next</span>
+            </li>
+        }
+    </ul>
+</nav>
