--- a/Web/ForumSys.Web/wwwroot/css/site.css
+++ b/Web/ForumSys.Web/wwwroot/css/site.css
@@ -1,9 +1,21 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+/*Short content post style*/
 .short-content-post {
     height: 54px;
 }
+
+/*Hover over icons in ById view*/
+.hover-button-type {
+    cursor: pointer;
+}
+
+.hover-button-type:hover {
+    color: red!important;
+    cursor: pointer;
+}
+/*End of hover over icons in ById view*/
+
 
 #votesCount {
     width: 15px;
