Fixing some bugs

--- a/Web/ForumSys.Web/Views/Post/ById.cshtml
+++ b/Web/ForumSys.Web/Views/Post/ById.cshtml
@@ -86,7 +86,7 @@
 
                     let down = document.getElementById("downVoteIcont");
 
-                    down.setAttribute("class", "fa fa-thumbs-up text-primary hover-button-type");
+                    down.setAttribute("class", "fa fa-thumbs-down text-primary hover-button-type");
                 }
             })
 
@@ -114,7 +114,7 @@
 
                         document.getElementById("upVoteIcont").setAttribute("class", "fa fa-thumbs-up text-primary hover-button-type");
 
-                    document.getElementById("downVoteIcont").setAttribute("class", "fa fa-thumbs-up text-warning hover-button-type");
+                    document.getElementById("downVoteIcont").setAttribute("class", "fa fa-thumbs-down text-warning hover-button-type");
                     }
                 }
             })
