--- a/Web/ForumSys.Web/Views/Categories/ByName.cshtml
+++ b/Web/ForumSys.Web/Views/Categories/ByName.cshtml
@@ -16,113 +16,119 @@
     </form>*@
 
 
-
-@foreach (var post in Model.ForumPosts)
+@if (this.Model.ForumPosts != null && this.Model.ForumPosts.Any())
 {
+    @foreach (var post in Model.ForumPosts)
+    {
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" />
 
-    <div class="container">
+        <div class="container">
 
 
-        <div class="well">
-            <div class="media">
-                <a class="pull-left mr-3" href="#">
-                    <img class="media-object" src="@Model.ImageURL" width="250">
-                </a>
-                <div class="media-body">
-                    <h4 class="media-heading"><a asp-controller="Post" asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h4>
-                    <p class="text-right"><i class="fa fa-user"></i>@post.UserUserName</p>
-                    <p class="short-content-post">
-                        @post.ShortContent
-                    </p>
-                    <ul class="list-inline list-unstyled">
-                        <li>
-                            <span>
-                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                @post.CreatedOn
-                                <i class="fa fa-comment pl-sm-2"></i> @post.CommentsCount
-                                <i class="fa fa-heart-o pl-sm-2"></i>
-                                @post.PositiveVotes
-                                <i class="fa fa-thumbs-down"></i>
-                                @post.NegativeVotes
-                            </span>
-                        </li>
-
-                        @*<li>|</li>
-                            <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
-                            <li>|</li>
+            <div class="well">
+                <div class="media">
+                    <a class="pull-left mr-3" href="#">
+                        <img class="media-object" src="@Model.ImageURL" width="250">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading"><a asp-controller="Post" asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h4>
+                        <p class="text-right"><i class="fa fa-user"></i>@post.UserUserName</p>
+                        <p class="short-content-post">
+                            @post.ShortContent
+                        </p>
+                        <ul class="list-inline list-unstyled">
                             <li>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star"></span>
-                                <span class="glyphicon glyphicon-star-empty"></span>
+                                <span>
+                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                    @post.CreatedOn
+                                    <i class="fa fa-comment pl-sm-2"></i> @post.CommentsCount
+                                    <i class="fa fa-heart-o pl-sm-2"></i>
+                                    @post.PositiveVotes
+                                    <i class="fa fa-thumbs-down"></i>
+                                    @post.NegativeVotes
+                                </span>
                             </li>
-                            <li>|</li>*@
-                        @*<li>
-                                <span><i class="fa fa-facebook-square"></i></span>
-                                <span><i class="fa fa-twitter-square"></i></span>
-                                <span><i class="fa fa-google-plus-square"></i></span>
-                            </li>*@
-                    </ul>
+
+                            @*<li>|</li>
+                                <span><i class="glyphicon glyphicon-comment"></i>@post.CommentsCount</span>
+                                <li>|</li>
+                                <li>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star-empty"></span>
+                                </li>
+                                <li>|</li>*@
+                            @*<li>
+                                    <span><i class="fa fa-facebook-square"></i></span>
+                                    <span><i class="fa fa-twitter-square"></i></span>
+                                    <span><i class="fa fa-google-plus-square"></i></span>
+                                </li>*@
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <hr />
+        <hr />
+    }
 }
-<nav aria-label="...">
-    <ul class="pagination justify-content-center">
+@if (this.Model.PagesCount > 1)
+{
 
-        @if (this.Model.CurrentPage <= 1)
-        {
-            <li class="page-item disabled">
-                <span class="page-link">Previous</span>
-            </li>
-        }
-        else
-        {
-            <li class="page-item">
-                <a class="page-link "
-                   asp-controller="Categories"
-                   asp-action="ByName"
-                   asp-route-name="@this.Model.Title"
-                   asp-route-page="@(this.Model.CurrentPage - 1)">
-                    Previous
-                </a>
+    <nav aria-label="...">
+        <ul class="pagination justify-content-center">
 
-            </li>
-        }
+            @if (this.Model.CurrentPage <= 1)
+            {
+                <li class="page-item disabled">
+                    <span class="page-link">Previous</span>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link "
+                       asp-controller="Categories"
+                       asp-action="ByName"
+                       asp-route-name="@this.Model.Title"
+                       asp-route-page="@(this.Model.CurrentPage - 1)">
+                        Previous
+                    </a>
 
-        @for (int i = 1; i <= this.Model.PagesCount; i++)
-        {
-            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
-            <li class="page-item @active">
-                <a class="page-link "
-                   asp-controller="Categories"
-                   asp-action="ByName"
-                   asp-route-name="@this.Model.Title"
-                   asp-route-page="@i">@i</a>
-            </li>
-        }
-        @if (this.Model.CurrentPage < this.Model.PagesCount)
-        {
-            <li class="page-item">
-                <a class="page-link "
-                   asp-controller="Categories"
-                   asp-action="ByName"
-                   asp-route-name="@this.Model.Title"
-                   asp-route-page="@(this.Model.CurrentPage + 1)">
-                    Next
-                </a>
-            </li>
-        }
-        else
-        {
-            <li class="page-item disabled">
-                <span class="page-link">Next</span>
-            </li>
-        }
-    </ul>
-</nav>
+                </li>
+            }
+
+            @for (int i = 1; i <= this.Model.PagesCount; i++)
+            {
+                var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+                <li class="page-item @active">
+                    <a class="page-link "
+                       asp-controller="Categories"
+                       asp-action="ByName"
+                       asp-route-name="@this.Model.Title"
+                       asp-route-page="@i">@i</a>
+                </li>
+            }
+            @if (this.Model.CurrentPage < this.Model.PagesCount)
+            {
+                <li class="page-item">
+                    <a class="page-link "
+                       asp-controller="Categories"
+                       asp-action="ByName"
+                       asp-route-name="@this.Model.Title"
+                       asp-route-page="@(this.Model.CurrentPage + 1)">
+                        Next
+                    </a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item disabled">
+                    <span class="page-link">Next</span>
+                </li>
+            }
+        </ul>
+    </nav>
+}
