--- a/Web/ForumSys.Web/Views/Post/Create.cshtml
+++ b/Web/ForumSys.Web/Views/Post/Create.cshtml
@@ -3,47 +3,60 @@
     ViewData["Title"] = "Create";
 }
 
-<h1 class="d-flex justify-content-center">@ViewData["Title"]</h1>
+@{
+    var categoryName = this.Model.Categories.Where(x => x.Id == Model.Id).Select(n => n.Name).FirstOrDefault();
+}
 
 
-<script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-    tinymce.init({
-        selector: "textarea",
-        plugins: [
-            "image paste table link code media"
-        ]
-    });
-</script>
+@if (categoryName != null)
+{
+    <h1 class="d-flex justify-content-center">@ViewData["Title"] post in @categoryName</h1>
 
-<form asp-action="Create" asp-area="" asp-controller="Post" method="post">
+    <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        tinymce.init({
+            selector: "textarea",
+            plugins: [
+                "image paste table link code media"
+            ]
+        });
+    </script>
 
-    <div>
-        <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
-    </div>
+    <form asp-action="Create" asp-area="" asp-controller="Post" method="post">
 
-    <div>
-        <label asp-for="Content"></label>
-        <textarea id="textValidate" asp-for="Content" class="form-control"></textarea>
-        <span asp-validation-for="Content" class="text-danger"></span>
-    </div>
+        <input type="hidden" value="@Model.Id" asp-for="Id" />
 
-    <div>
-        <label>Category</label>
-        <select class="form-control" asp-for="CategoryId" asp-items="Model.Categories.Select(x => new SelectListItem(x.Name, x.Id.ToString()))">
-        </select>
-        <span asp-validation-for="CategoryId" class="text-danger"></span>
-    </div>
+        <div>
+            <label asp-for="Title"></label>
+            <input asp-for="Title" class="form-control" />
+            <span asp-validation-for="Title" class="text-danger"></span>
+        </div>
 
-    <input  onclick="validate()" class="btn btn-outline-primary mt-3" type="submit" name="submit" value="Add post" />
-</form>
+        <div>
+            <label asp-for="Content"></label>
+            <textarea id="textValidate" asp-for="Content" class="form-control"></textarea>
+            <span asp-validation-for="Content" class="text-danger"></span>
+        </div>
 
-<script>
-    function validate() {
-        const data = document.getElementById("#textValidate");
-        console.log(data);
-        return false;
-    }
-</script>
+        @*<div>
+                <label>Category</label>
+                <select class="form-control" asp-for="CategoryId" asp-items="Model.Categories.Select(x => new SelectListItem(x.Name, x.Id.ToString()))">
+                </select>
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
+            </div>*@
+
+        <input onclick="validate()" class="btn btn-outline-primary mt-3" type="submit" name="submit" value="Add post" />
+    </form>
+
+    <script>
+        function validate() {
+            const data = document.getElementById("#textValidate");
+            console.log(data);
+            return false;
+        }
+    </script>
+}
+else
+{
+    <h3 class="text-center">Invalid post</h3>
+}
