--- a/Web/ForumSys.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/ForumSys.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -15,6 +15,13 @@
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
+
+            <div class="form-group">
+                <label>Change forum name</label>
+                <input asp-for="Input.ChangeUserName" class="form-control" />
+                <span asp-validation-for="Input.ChangeUserName" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
